--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
                 <ul class="nav nav-pills">
                     <li class="nav-item"><a href="#nosotros" class="nav-link">Nosotros</a></li>
-                    <li class="nav-item"><a href="#pequeñitos" class="nav-link">pequeñitos</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">formulario adopción</a></li>
+                    <li class="nav-item"><a href="#pequeñitos" class="nav-link">Pequeñitos</a></li>
+                    <li class="nav-item"><a href="#adopcion" class="nav-link">Formulario adopción</a></li>
 
                 </ul>
             </header>
@@ -167,21 +167,21 @@
         </div>
     </div>
 
-    <div class="container-fluid text-center bg-secondary">
+    <div class="container-fluid text-center bg-secondary mt-3" id="adopcion">
         <div class="row justify-content-center">
-            <h2 class="display-6 fst-italic " id="adopcion">FORMULARIO DE ADOPCIÓN</h2>
+            <h2 class="display-6 fst-italic " >FORMULARIO DE ADOPCIÓN</h2>
             <div class="col-8 align-self-center mt-2">
                 <div class="mb-3">
                     <label for="nombre" class="form-label">Nombre Completo</label>
-                    <input type="email" class="form-control" id="nombre" placeholder=" nombre y apellido">
+                    <input type="text" class="form-control" id="nombre" placeholder=" nombre y apellido">
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Correo Electrónico</label>
-                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                    <input type="email" class="form-control" id="email" placeholder="nombre@gmail.com">
                 </div>
                 <div class="mb-3">
                     <label for="telefono" class="form-label">Teléfono</label>
-                    <input type="email" class="form-control" id="telefono" placeholder="0351-00000000">
+                    <input type="text" class="form-control" id="telefono" placeholder="0351-00000000">
                 </div>
 
                 <div>
@@ -189,7 +189,7 @@
                     <select class="form-select" aria-label="seleccione mascota" id="idMascota">
                         <option value="goody">Goody</option>
                         <option value="panchito">Panchito</option>
-                        <option value="dulceDeLeche">dulce de leche</option>
+                        <option value="dulceDeLeche">Dulce de leche</option>
                         <option value="ameli">Amelí</option>
                         <option value="dama">Dama</option>
                         <option value="willy">Willy</option>
